# scorched

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_SOURCES.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SCORCHED_AUDIT_REPORT_2026-04-25.md  SECURITY.md  SETUP.md  SETUP_DEVELOPER.md  START_HERE.md  advisor.md  alembic.ini  analyst_guidance.md  docker-compose.yml  entrypoint.sh  index.html  main.py  pyproject.toml  recommender.py  strategy.json  strategy.md  strategy.py
alembic/: env.py
cron/: common.py  intraday_monitor.py  tradebot_phase0.py  tradebot_phase1.py  tradebot_phase1_5.py  tradebot_phase2.py  tradebot_phase3.py  tradebot_reconcile.py  tradebot_weekly_reflection.py
docs/: generate_roadmap_pdf.py  next-session-plan.md
scripts/: backtest.py  check_strategy_docs.py  guidance_lint.py  setup_cron.py  validate_setup.py
src/: tradebot_phase1.py  tradebot_phase2.py
testing/: README.md  docker-compose.yml  strategy.json
tests/: conftest.py  test_alpaca_broker.py  test_api_tracker.py  test_api_tracker_redaction.py  test_auth_failclosed.py  test_backtest.py  test_broker_base.py  test_circuit_breaker.py  test_claude_client.py  test_correlation.py  test_cron_common_http.py  test_cron_lock.py  test_detailed_news.py  test_drawdown_gate.py  test_finnhub_data.py  test_guidance_api.py  test_guidance_lint.py  test_guidance_service.py  test_http_retry.py  test_intraday.py  test_intraday_endpoint.py  test_mcp_confirm.py  test_onboarding_auth.py  test_paper_broker.py  test_prefetch_timeout.py  test_prompt_loader.py  test_recommender_injection.py  test_research_context_rendering.py  test_research_scoring.py  test_retry.py  test_risk.py  test_risk_gates.py  test_risk_review.py  test_sector_gate.py  test_startup_assertion.py  test_strategy_loader.py  test_technicals.py  test_total_value.py  test_trades_confirm.py  test_trailing_stops.py
(+106 files in other folders)
