[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebot"
version = "0.1.0"
description = "Simulated stock trading MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.34.0",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
    "fredapi>=0.5.1",
    "pandas-market-calendars>=4.3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scorched" = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
