[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorched"
version = "1.0.0"
description = "AI-powered stock trading assistant — Claude analyzes markets, manages a portfolio, and learns from its trades"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31",
    "anthropic>=0.34.0",
    "yfinance>=0.2.40",
    "alpaca-py>=0.30.0",
    "finnhub-python>=2.4.0",
    "httpx>=0.27.0",
    "fredapi>=0.5.1",
    "pandas-market-calendars>=4.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scorched" = ["static/*", "prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"
